# bfc-tunnel

./: .clangd  .gitignore  CMakeLists.txt  project_milestone.md
cmake/: FetchBotan.cmake  cum-cpp-gen.sh
configuration/: cfg.ini  cfg_security.ini  cfg_transport.ini  node.cfg  private_keys.csv  public_keys.csv
docs/: behavior.md  protocol.md  protocol.txt  simulator.md
interface/: btprotocol.cum
scripts/: docs_server.py
src/bfc_tunnel/: Untitled  bfc_tunnel_types.hpp  logger.cpp  logger.hpp  node.cpp  node.hpp  peer.hpp  port.cpp  port.hpp  protocol.hpp  route_manager.cpp  route_manager.hpp  safeint.hpp  transport_base.hpp  transport_plaintext.cpp  transport_plaintext.hpp
src/bfc_tunnel/frame/: frame.hpp
src/bfc_tunnel/protocol/: btprotocol.hpp  frame.hpp  framing.hpp
src/bfc_tunnel/security/: dh.cpp  dh.hpp  dh_backend.hpp  key_utils.cpp  key_utils.hpp  x25519_dh.cpp  x25519_dh.hpp
src/bfc_tunnel/transport/: transport_types.cpp  transport_types.hpp  udp4_unicast_transport.cpp  udp4_unicast_transport.hpp  udp_unicast_transport.cpp  udp_unicast_transport.hpp
src/bfc_tunnel/utils/: cv_reactor_helper.hpp  logger.cpp  logger.hpp  msg_utils.cpp  msg_utils.hpp  number_utils.hpp  reactor_helper.hpp  string_utils.hpp
src/tests/: dh_tests.cpp  frame_tests.cpp  msg1_tests.cpp  network_key_tests.cpp  protocol_tests.cpp
